--- a/www/index.html
+++ b/www/index.html
@@ -30,11 +30,14 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="app.js"></script>
+    <script src="Main/main.module.js"></script>
+    <script src="Login/login.module.js"></script>
+    <script src="Login/controllers/loginController.js"></script>
+
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="AddressBookApp">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
