--- a/www/index.html
+++ b/www/index.html
@@ -16,12 +16,9 @@
       }
     </script>-->
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -31,9 +28,22 @@
 
     <!-- your app's js -->
     <script src="app.js"></script>
+    <!--Nodules-->
     <script src="Main/main.module.js"></script>
     <script src="Login/login.module.js"></script>
+    <script src="Contacts/contacts.module.js"></script>
+    <script src="Calendar/calendar.module.js"></script>
+    <script src="Message/message.module.js"></script>
+    <script src="Favourites/favourites.module.js"></script>
+    <!--Controllers-->
     <script src="Login/controllers/loginController.js"></script>
+    <script src="Main/controllers/dashController.js"></script>
+    <script src="Contacts/controllers/contactsController.js"></script>
+    <script src="Calendar/controllers/calendarController.js"></script>
+    <script src="Message/controllers/messageController.js"></script>
+    <script src="Favourites/controllers/favouritesController.js"></script>
+    <!--Directives-->
+    <script src="Main/directives/dash-card.directive.js"></script>
 
   </head>
 
