--- a/www/Contacts/teplates/contacts.html
+++ b/www/Contacts/teplates/contacts.html
@@ -1,5 +1,26 @@
-<ion-view view-title="Carsa address book">
-  <ion-content class="padding mc-bg-color">
+<ion-view view-title="Carsa address book" class="contacts">
+  <ion-content class="">
+    <ion-list>
+      <ion-item class="item-avatar-left">
+
+        <img ng-src="{{item.img}}">
+        <h2>{{item.title}}</h2>
+        <p>{{item.description}}</p>
+        <ion-option-button class="button-positive" ng-click="share(item)">
+          Share
+        </ion-option-button>
+        <ion-option-button class="button-info" ng-click="edit(item)">
+          Edit
+        </ion-option-button>
+        <ion-delete-button class="ion-minus-circled" ng-click="items.splice($index, 1)">
+        </ion-delete-button>
+        <ion-reorder-button class="ion-navicon" on-reorder="reorderItem(item, $fromIndex, $toIndex)">
+        </ion-reorder-button>
+
+      </ion-item>
+    </ion-list>
+
 
   </ion-content>
+  <button class="button button-positive icon ion-plus-round mc-rounded"></button>
 </ion-view>
