--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,9 @@
 
     <!-- your app's js -->
     <script src="app.js"></script>
+    <script src="lib/bluebird.min.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic.cloud.min.js"></script>
     <!--Nodules-->
     <script src="Main/main.module.js"></script>
     <script src="Login/login.module.js"></script>
