inserimento sign in con recupero immagine

--- a/www/index.html
+++ b/www/index.html
@@ -31,15 +31,17 @@
     <script src="lib/bluebird.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic.cloud.min.js"></script>
-    <!--Nodules-->
+    <!--Modules-->
     <script src="Main/main.module.js"></script>
     <script src="Login/login.module.js"></script>
+    <script src="Signin/signin.module.js"></script>
     <script src="Contacts/contacts.module.js"></script>
     <script src="Calendar/calendar.module.js"></script>
     <script src="Message/message.module.js"></script>
     <script src="Favourites/favourites.module.js"></script>
     <!--Controllers-->
     <script src="Login/controllers/loginController.js"></script>
+    <script src="Signin/controllers/signinController.js"></script>
     <script src="Main/controllers/dashController.js"></script>
     <script src="Contacts/controllers/contactsController.js"></script>
     <script src="Calendar/controllers/calendarController.js"></script>
