--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -49,6 +50,15 @@
     <script src="Favourites/controllers/favouritesController.js"></script>
     <!--Directives-->
     <script src="Main/directives/dash-card.directive.js"></script>
+    <!--Filters-->
+    <script src="Main/filters/avatar.filter.js"></script>
+    <!--Services-->
+    <script src="Main/services/user-srv.js"></script>
+    <script src="Main/services/push-srv.js"></script>
+    <script src="Main/services/notification-center.js"></script>
+    <!--Interceptors-->
+    <script src="Main/interceptors/base-url.interceptor.js"></script>
+
 
   </head>
 
