--- a/www/Message/teplates/message.html
+++ b/www/Message/teplates/message.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Carsa address book">
+<ion-view view-title="Message">
   <ion-content class="padding mc-bg-color">
 
   </ion-content>
